--- a/app/views/layouts/heroku_config_vars/application.html.erb
+++ b/app/views/layouts/heroku_config_vars/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HerokuConfigVars</title>
+  <title>Heroku Configuration</title>
   <%= stylesheet_link_tag    "heroku_config_vars/application", :media => "all" %>
   <%= javascript_include_tag "heroku_config_vars/application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <h1>Heroku Configurator</h1>
+  <h1>Heroku Configuration</h1>
 
   <ul class="submenu">
     <li><%= menu_link 'Heroku Configuration Variables', heroku_app_path %></li>
